2005-08-16  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Declare prefix-from-QName.

2005-08-03  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (flookup): Change to take single argument.
	(lookup): Merge/inline into walkReferenceExp.
	(walkReferenceExp): Call ClassMethodProc's makeExp rather than make.

	* XQuery.java (instance): Make final.
	(xqEnvironment): New final field.
	(initXQuery): New private method, called from static constructor.
	(<init>): Just set two fields.

2005-07-27  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Pass external variable's type to getExternal.
	Don't set IS_UNKNOWN.
	* XQuery.java (getExternal): Cast external value if type is specified
	as a number.

2005-07-21  Per Bothner  <per@bothner.com>

	* XQuery.java (<init>): Comment out unused variable.

	* XQuery.java (getExternal): New method.

	* XQParser.java (parse): Implement external variables.

2005-06-26  Per Bothner  <per@bothner.com>

	* XQParser.java (priority): Use a switch statement instead of a shift.
	Also fix some errors in the precedence hierarchy, compared to the
	current draft.
	(OP_OR...OP_INSTANCEOF): Re-order to be plain sequential.
	(OP_IDIV): New operator.
	(peekOperator): Use switch statement for presuambly better performance.
	Map 'idiv' to OP_IDIV.
	(makeBinary): Handle OP_IDIV.
	(parseBinaryExpr): Remove now-bogus test.

2005-06-04  Per Bothner  <per@bothner.com>

	* XQuery.java: Update for AbstractFormat move to gnu.lists.

	* XQuery.java (getFormat): Change return type.

2005-05-27  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Also set PARSE_IMMEDIATE flag.

2005-05-18  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (lookup): Use new getLangEnvironment method.

2005-05-17  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Pass current Environment, rather than
	language Environment, to evalModule.

2005-03-16  Per Bothner  <per@bothner.com>
