@@ -1,5 +1,15 @@
 2005-08-16  Per Bothner  <per@bothner.com>
 
+	* NodeUtils.java: New class.
+	(atomicValue, localName, namespaceURI): New static methods.
+	* DistinctValues.java: New class.
+	* Makefile.am: Update accordingly.
+	* Compare.java (apply): Add NamedCollator parameter.  Use it.
+	Get atomiValue of nodes.
+	(apply2): Update for modified apply.
+	* MinMax.java (combine): Extract numberValue from nodes.
+	* StringValue.java (compare): New method.
+
 	* NamedCollator.java (UNICODE_CODEPOINT_COLLATION): Update uri.
 	(find): New alias (for now) for make.
 	
