@@ -1,5 +1,15 @@
 2005-08-16  Per Bothner  <per@bothner.com>
 
+	* XQResolveNames.java (COMPARE_BUILTIN, DISTINCT_VALUES_BUILTIN,
+	LOCAL_NAME_BUILTIN, NAMESPACE_URI_BUILTIN, ROOT_BUILTIN): New constants.
+	(positionDecl): Remove unneded static field.
+	(pushBuiltin): New convenience method.
+	(<init>): Push various builtin functions.
+	(getCollator, withCollator, withContext): New methods.
+	(walkApplyExp): Implement support for various xxx_BUILTIN functions.
+	* XQuery.java (initXQuery): Remove declaration for fn:root, since
+	it is now handled by XQResolveNames constructor.
+
 	* XQuery.java (initXQuery): Declare prefix-from-QName.
 
 2005-08-03  Per Bothner  <per@bothner.com>
